# testgtk

./: 0Temp.c  Readme.md  application.c  application.h  application.pro  config.h  install.sh  main.c  meson.build  test.sh  testgtk.pro  thread_self.c
application/: Readme.md  application.c  application.h  application.pro  appwindow.c  config.h  install.sh  main.c  meson.build  preferences.c  window.c  window.h
demos/application1/: application.h  application.pro  appwindow.c  main.c  meson.build
demos/etkaction/: appwindow.c  appwindow.h  config.h  etkaction.pro  meson.build
demos/gtkapplication/: application.c  application.h  appwindow.c  gtkapplication.pro  main.c  meson.build
demos/gtkappsimple/: appwindow.c  appwindow.h  gtkappsimple.pro  main.c  meson.build
demos/notebook/: 0Temp.c  appactions.c  etkwidget.c  etkwidget.h  meson.build  notebook.pro
demos/scintilla/: main.c
demos/singleinst/: 0Temp.c  appactions.c  appwindow.c  libargs.c  libargs.h  main.c  meson.build  singleinst.pro
demos/testspawn/: main.c  meson.build  spawn.c
etkaction/: 0Temp.c  appwindow.c  appwindow.h  config.h  install.sh
gtk3-tutorial/: cellrenderertoggle.c
gtkapplication/: application.c  application.h  appwindow.c  config.h  main.c  preferences.c  preferences.h  testgtk.pro
gtkappsimple/: appwindow.c  config.h  gtkappsimple.pro  meson.build  preferences.c  preferences.h  testgtk.pro
other/: dialog_fontchooser.c  dnd_listbox.c
samples/: 01_widgets.c  02_toolbar.c  042_grid.c  cairo_draw.c  dialog_fontchooser.c  gio_app_info.c  gmenu.c  gtk_appchooser.c  gvalue.c  iconlist.c  iconview.c  image.c  image_saturate.c  listbox_dnd.c  listview.c  object_set.c  object_set_data_full.c  object_test.c  redirect_widget.c  single_instance.c  socket_filepath.c  socket_path.c  sys_gudev.c
samples/application1/: application.c  appwindow.h
samples/etkaction/: etkaction.pro  main.c  meson.build
samples/gtkapplication/: application.c  appwindow.h  main.c  preferences.c  preferences.h
samples/gtkwindow/: appwindow.c  gtkappsimple.pro
samples/notebook/: appwindow.c  appwindow.h  main.c  meson.build  notebook.pro
samples/scintilla/: meson.build  scintilla.pro
samples/singleinst/: appwindow.c  appwindow.h  main.c  meson.build  singleinst.pro
samples/snippets/: 01_widgets.c  02_toolbar.c  0Temp.c  list_toplevels.c  object_set.c
samples/testspawn/: Readme.md  testspawn.pro
test_application/: application.c  application.h
test_gtksimple/: gtk_simple  gtk_simple.c  gtk_simple.supp  gtksimple  gtksimple.c
test_valgrind/: test_valgrind  test_valgrind.c  valgen.py
testroot/: main.c  meson.build  testroot.pro
testroot/data/: org.hotnuma.testroot.policy  testroot-pkexec  testroot.desktop
testspawn/: main.c  meson.build  spawn.c  testspawn.pro
tutorial-zetcode/: 010_version.c  020_simple.c  021_center.c  022_icon.c  024_mnemonic.c  030_simplemenu.c  032_imagemenu.c  033_checkmenuitem.c  034_popupmenu.c  036_undoredo.c  041_vbox.c  042_grid.c  043_windows.c  050_buttonclick.c  053_disconnect.c  054_dragdrop.c  061_aboutdialog.c  072_frames.c  080_combobox.c  081_separator.c  083_image.c  090_listview.c  102_search.c  zetcode-gtk.desktop
zetcode/: 010_version.c  020_simple.c  021_center.c  022-icon.c  023-toolltip.c  023_toolltip.c  024-mnemonic.c  030-simplemenu.c  031_submenu.c  032-imagemenu.c  032_imagemenu.c  033_checkmenuitem.c  034-popupmenu.c  034_popupmenu.c  035-toolbar.c  035_toolbar.c  036-undoredo.c  040-fixed.c  040_fixed.c  041_vbox.c  042_grid.c  043_windows.c  050_buttonclick.c  051-moveevent.c  051_moveevent.c  052-entersignal.c  052_entersignal.c  053-disconnect.c  053_disconnect.c  054-dragdrop.c  055-timer.c  055_timer.c  060-messagedialogs.c  060_messagedialogs.c  061-aboutdialog.c  061_aboutdialog.c  062-fontdialog.c  062_fontdialog.c  063-colordialog.c  063_colordialog.c  (+37 more)
zetcode/mycpu/: main.c  mycpu.c
(+712 files in other folders)
